--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 /* src/components/Header.css */
 
 .header {
-  position: fixed; 
+  position: static; 
   top: 0;
   left: 0;
   width: 100%;
@@ -14,8 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 40px;
-  z-index: 1000; 
+  padding: 0 40px; 
 }
 
 /* Style for the logo container/link */
